[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/GDBar.gd" type="Script" id=2]

[node name="GDBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
margin_right = 1890.0
margin_bottom = 30.0
color = Color( 0.117647, 0.117647, 0.180392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_left = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Elements" type="HBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_right = 1905.0
margin_bottom = 30.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftContainer" type="HBoxContainer" parent="MarginContainer/Elements"]
margin_right = 627.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="CenterContainer" type="HBoxContainer" parent="MarginContainer/Elements"]
margin_left = 631.0
margin_right = 1258.0
margin_bottom = 30.0
size_flags_horizontal = 3
alignment = 1

[node name="RightContainer" type="HBoxContainer" parent="MarginContainer/Elements"]
margin_left = 1262.0
margin_right = 1890.0
margin_bottom = 30.0
size_flags_horizontal = 3
alignment = 2
